# mcp_demo

./: client.py  mathserver.py  pyproject.toml  requirements.txt  weather.py
